--- a/Final_AED_Project/src/UserInterface/SystemAdmin/MedicalCareWorkAreaJpanel.form
+++ b/Final_AED_Project/src/UserInterface/SystemAdmin/MedicalCareWorkAreaJpanel.form
@@ -31,9 +31,9 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="rightSystemAdminPanel" alignment="0" pref="1211" max="32767" attributes="0"/>
+          <Component id="rightSystemAdminPanel" alignment="0" pref="900" max="32767" attributes="0"/>
           <Group type="102" alignment="0" attributes="0">
-              <Component id="jPanel3" pref="1205" max="32767" attributes="0"/>
+              <Component id="jPanel3" pref="894" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -172,7 +172,7 @@
               <Color blue="d3" green="c2" red="8a" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/ui/Picture/cover1.jpeg"/>
+              <Image iconType="3" name="/ui/Picture/homepageimage.jpg"/>
             </Property>
           </Properties>
           <Constraints>
